import pygame

class Timer:
    def __init__(self, duration, func=None,  repeat=False, autostart=False):
        self.duration = duration  # in milliseconds
        self.start_time = 0
        self.active = False
        self.func = func
        self.repeat = repeat
        
        if autostart:
            self.activate()
        
    def __bool__(self):
        return self.active
    
    def activate(self):
        self.active = True
        self.start_time = pygame.time.get_ticks()
        
    def deactivate(self):
        self.active = False
        self.start_time = 0
        if self.repeat:
            self.activate()

    
    def update(self):
        if self.active:
            elapsed_time = pygame.time.get_ticks() - self.start_time
            self.remaining_time = max(0, self.duration - elapsed_time)

            # If the time is up, trigger the callback and deactivate
            if self.remaining_time == 0:
                if self.func:
                    self.func()
                self.deactivate()
            
            return self.remaining_time  # Return the remaining time

