@startuml classes_full_game
set namespaceSeparator none
class "AllSprites" as game.code.groups.AllSprites {
  display_surface
  offset
  draw(target_position)
}
class "AnimatedSprite" as game.code.sprites.AnimatedSprite {
  animation_speed : int
  frame_index : int
  frames
  image
  animate(dt)
}
class "Coin" as game.code.sprites.Coin {
  type : str
}
class "CollisionSprite" as game.code.sprites.CollisionSprite {
  image
  rect
}
class "ExitDoor" as game.code.sprites.ExitDoor {
  type : str
}
class "Game" as game.code.main.Game {
  all_sprites
  clock
  collectible_sprite
  collision_sprites
  countdown_timer
  current_level_url
  display_surface
  exit_door
  exit_key
  exit_position
  exit_sprite
  game_over_surface
  game_over_surface_rect
  gui_font
  gui_font_big
  gui_logger
  gui_logger_rect
  item_position : NoneType
  level_data
  level_height
  level_loader
  level_width
  new_level_url
  player
  player_frames
  player_position : NoneType, tuple
  remaining_time : int
  running : bool
  timer_surface
  timer_surface_rect
  countdown()
  game_over_func()
  get_exit_spawnable_position()
  get_item_spawnable_position()
  get_new_level()
  get_player_spawnable_position()
  interpolate_color(start_color, end_color, factor)
  load_assets()
  log()
  log_gui()
  reset_query_params()
  run()
  setup()
}
class "Key" as game.code.sprites.Key {
  type : str
}
class "LevelLoader" as game.code.levelloader.LevelLoader {
  grid
  level
  get_grid()
  parse_level(level_data)
}
class "Player" as game.code.sprites.Player {
  collectible_sprite
  collision_sprites
  direction
  exit_sprite
  flip : bool
  frame_index : int
  get_new_level
  gravity
  has_key : bool
  image
  on_floor : bool
  speed
  type : str
  animate(dt)
  check_collectible()
  check_finish()
  check_floor()
  collision(direction)
  input()
  move(dt)
  update(dt)
}
class "Sprite" as game.code.sprites.Sprite {
  image
  rect
  type : str
}
class "Timer" as game.code.timer.Timer {
  active : bool
  duration
  func : NoneType
  remaining_time
  repeat : bool
  start_time : int
  activate()
  deactivate()
  update()
}
game.code.sprites.AnimatedSprite --|> game.code.sprites.Sprite
game.code.sprites.Coin --|> game.code.sprites.Sprite
game.code.sprites.ExitDoor --|> game.code.sprites.Sprite
game.code.sprites.Key --|> game.code.sprites.Sprite
game.code.sprites.Player --|> game.code.sprites.AnimatedSprite
@enduml
